feat: download output

--- a/index.html
+++ b/index.html
@@ -5,12 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Kompression Image Compressor</title>
-    <style>
-        canvas {
-            margin: 10px;
-            border: 1px solid #ccc;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
@@ -21,6 +17,7 @@
     <canvas id="outputCanvas"></canvas>
     <br><br>
     <button id="compressBtn">Compress Image</button>
+    <button id="downloadBtn">Download Image</button>
 
     <script src="kmeans.js"></script>
     <script src="index.js"></script>
