--- a/the-algorithm.html
+++ b/the-algorithm.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Kompression</title>
+    <title>The Algorithm | Kompression</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -19,19 +19,6 @@
         </ul>
     </nav>
 
-    <div id="container">
-        <h2>Upload an image:</h2>
-        <input type="file" id="imgInput">
-        <br><br>
-        <canvas id="inputCanvas"></canvas>
-        <canvas id="outputCanvas"></canvas>
-        <br><br>
-        <button id="compressBtn">Compress Image</button>
-        <button id="downloadBtn">Download Image</button>
-    </div>
-
-    <script src="kmeans.js"></script>
-    <script src="index.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
